# robin

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EIDOS_GUIDE.md  EIDOS_QUICKSTART.md  Intelligence_Flow.md  Intelligence_Flow_Map.md  META_RALPH.md  MoE_Plan.md  OPENCLAW_FULL_SYSTEM_BRIEF.md  OPENCLAW_IMPLEMENTATION_TASKS.md  OPENCLAW_TREND_FLOW_BRIEF.md  OPTIMIZATION_CHECKER.md  OSS_ONLY_MANIFEST.md  PIVOT_PLAN.md  PRODUCTION_READINESS.md  PROJECT.md  README.md  SCHEDULER.md  SECURITY.md  SEMANTIC_ADVISOR_DESIGN.md  SKILL.md  SPARK_EMOTIONS.md  SPARK_LEARNING_GUIDE.md  TREND_FLOW_SCHEMA.md  TUNEABLES.md  VIBESHIP_OPTIMIZER.md  bridge_worker.py  cleanup_insights.py  cli.py  install.ps1  install.sh  kait_ai_sidekick.py  kait_pulse.py  kait_scheduler.py  kait_sidekick.py  kait_watchdog.py  kaitd.py  matrix_worker.py  (+6 more)
adapters/: clawdbot_tailer.py  openclaw_tailer.py  stdin_ingest.py
config/: learning_sources.yaml  litellm_config.yaml  matrix_config_template.json  olla.yaml  opportunity_scanner.env.example  release_sast_baseline.json  tuneables.json
docs/: ADVISORY_AND_LEARNING_BENCHMARKS.md  ADVISORY_BENCHMARK_SYSTEM.md  ADVISORY_DAY_TRIAL.md  ADVISORY_FLOW_SCORECARD.md  ADVISORY_FLOW_TASKS.md  ADVISORY_OBSIDIAN_PLAYBOOK.md  ADVISORY_REALISM_PLAYBOOK.md  ADVISORY_RENEWAL_SYSTEM.md  ADVISORY_SYSTEM.md  ADVISORY_SYSTEM_FLOWCHART.md  AI_MANIFESTO.md  CHANGE_AND_UPGRADE_WORKFLOW.md  CHIPS.md  CHIPS_SCHEMA_FIRST_PLAYBOOK.md  CHIP_WORKFLOW.md  CONSCIOUSNESS_BRIDGE_V1.md  DEEPSEEK_ISOLATION_RULES.md  DOCS_INDEX.md  DOCUMENTATION_SYSTEM.md  GETTING_STARTED_5_MIN.md  GLOSSARY.md  LAUNCH_DOCUMENTATION_MAP.md  LEARNING_SYSTEMS_EXECUTION_LOOP_COMPREHENSIVE_GUIDE.md  LEARNING_SYSTEMS_EXECUTION_LOOP_RUNBOOK_TEMPLATE.md  LLM_INTEGRATION.md  MINIMAX_INTEGRATION.md  OBSIDIAN_OBSERVATORY_GUIDE.md  ONBOARDING.md  OPENCLAW_OPERATIONS.md  OPENCLAW_PATCH_CHECKLIST.md  OPENCLAW_PATHS_AND_DATA_BOUNDARIES.md  OPENCLAW_RESEARCH_AND_UPDATES.md  OPEN_CORE_FREEMIUM_MODEL.md  OPPORTUNITIES.md  OSS_BOUNDARY.md  OS_SIDEKICK.md  PROGRAM_STATUS.md  PROJECT_INTELLIGENCE.md  QUICKSTART.md  REMEDIATION_PLAN_2026-02-22.md  (+21 more)
examples/: health_check.ps1
hooks/: __init__.py  observe.py
kait/: __init__.py  cli.py  index_embeddings.py
lib/: __init__.py  action_matcher.py  advice_feedback.py  advisor.py  advisory_emitter.py  advisory_engine.py  advisory_gate.py  advisory_memory_fusion.py  advisory_packet_llm_reranker.py  advisory_packet_store.py  advisory_parser.py  advisory_preferences.py  advisory_prefetch_worker.py  advisory_quarantine.py  advisory_state.py  advisory_synthesizer.py  agent_feedback.py  aha_tracker.py  auto_promote.py  auto_tuner.py  bridge.py  bridge_cycle.py  carmack_kpi.py  chip_merger.py  cognitive_learner.py  consciousness_bridge.py  content_learner.py  context_sync.py  contradiction_detector.py  conversation_core.py  convo_analyzer.py  (+74 more)
(+1794 files in other folders)
